--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-3 text-light">
-                                    <h6>Reach Us</h6>
+                                    <h6 class="text-bold">Reach Us</h6>
                                     <ul class="list-unstyled">
                                         <li class="d-flex">
                                         <img src="assets/Vector.png" alt="" class="mt-1"  style="width: 20px; height: 20px;" srcset=""><p class="m-1">+6283362728</p>
@@ -170,7 +170,7 @@
                                     </ul> 
                                 </div>
                                 <div class="col-md-2 text-light d-none d-lg-block">
-                                    <h6>Legal</h6>
+                                    <h6 class="text-bold">Legal</h6>
                                     <ul class="list-unstyled">
                                         <li>
                                             <a href="" class=" text-white text-decoration-none"><p>Privacy Policy</p></a>
@@ -187,7 +187,7 @@
                                     </ul> 
                                 </div>
                                 <div class="col-md-2 text-light d-none d-lg-block">
-                                    <h6>Quick Links</h6>
+                                    <h6 class="text-bold">Quick Links</h6>
                                     <ul class="list-unstyled">
                                         <li>
                                             <a href="" class=" text-white text-decoration-none"><p>Techlabz Keybox</p></a>
